# audio-plugin-coder

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  cloudwash_crash_log.txt
.agent/rules/: agent.md  file-naming-conventions.md
.agent/skills/skill_design/: SKILL.md
.agent/skills/skill_design_webview/: SKILL.md
.agent/skills/skill_implementation/: SKILL.md
.agent/skills/skill_troubleshooting/: SKILL.md
.agent/troubleshooting/resolutions/: webview-blank-screen.md  webview-member-order-crash.md
.agent/workflows/: design.md  dream.md  impl.md  new.md  plan.md  ship.md  test.md
.claude/: settings.local.json
.claude/rules/: agent.md  file-naming-conventions.md  juce-build-protocols.md
.claude/skills/design/: SKILL.md
.claude/skills/dream/: SKILL.md
.claude/skills/impl/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/skill_design_webview/: SKILL.md
.claude/skills/skill_implementation/: SKILL.md
.claude/skills/skill_packaging/: SKILL.md
.claude/skills/skill_troubleshooting/: SKILL.md
.claude/troubleshooting/: known-issues.yaml
.claude/troubleshooting/resolutions/: webview-blank-screen.md  webview-member-order-crash.md
.claude/workflows/: design.md  dream.md  impl.md  plan.md  ship.md  test.md
.github/workflows/: build-pr.yml  build-release.yml  docs-freshness.yml  locusq-qa-harness.yml
.kilocode/rules/: agent.md  file-naming-conventions.md
.kilocode/skills/skill_design_webview/: SKILL.md
.kilocode/skills/skill_implementation/: SKILL.md
.kilocode/skills/skill_planning/: SKILL.md
.kilocode/skills/skill_troubleshooting/: SKILL.md
.kilocode/troubleshooting/: known-issues.yaml
.kilocode/troubleshooting/resolutions/: webview-blank-screen.md  webview-member-order-crash.md
.kilocode/workflows/: design.md  dream.md  impl.md  plan.md  ship.md  test.md
_tools/pluginval/.github/workflows/: build.yaml
common/: VisageJuceHost.h
docs/: README.md  github-actions.md
plugins/CloudWash/: CLOUDWASH_FIX_NEXT_STEPS.md  CMakeLists.txt  CRASH-FIX-PROGRESS.md  cloudwash_pluginval_final.txt  status.json
plugins/CloudWash/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/CloudWash/Source/dsp/clouds/dsp/: granular_processor.h  sample_rate_converter.h
plugins/CloudWash/Source/ui/public/: index.html
plugins/gnarly2/: CMakeLists.txt
plugins/nf_gnarly/: CMakeLists.txt
scripts/: build-and-install.ps1  preview-design.ps1  validate-docs-freshness.sh
templates/FFGL_Bridge/: CMakeLists.txt
templates/FFGL_Bridge/Source/: JuceWrapper.h  PluginMain.cpp
templates/Max_External/Source/: JuceBridge.h
